Simple text inputs get spaces in HTML via CSS

--- a/data/orbui.css
+++ b/data/orbui.css
@@ -234,6 +234,10 @@ form#entityForm legend{
     border:0;
     margin:0;
 }
+.editableFieldValue{
+    white-space: pre-line;
+    text-align: justify;
+}
 .editableFieldValue:hover{
     opacity:.8;
 }
