--- a/data/orbui.css
+++ b/data/orbui.css
@@ -75,8 +75,6 @@ section#main {
 .mainCol div.section{
     margin-bottom:6px;
 }
-
-
 ul {
     list-style:none;
     margin:0 0 9px 0;
@@ -87,16 +85,19 @@ th {
     line-height:18px;
     padding:12px;
 }
-
-
+.breadcrumb, .well {/* @Orbui */
+    background: #FFF;
+    border: 0px;
+    -webkit-border-radius: 6px;
+    border-radius: 6px;
+    border-bottom: 1px solid #C4C4C4;
+}
 p { /*This is Important for reledit viewing*/
   margin: 0;
 }
 table { /* for reledit viewing */
     width: 100%;
 }
-
-
 /* Primary View */
 form .errorMsg{
     color: #B94A48;
@@ -170,11 +171,6 @@ form#entityForm legend{
     border-bottom:1px solid #ddd;
     color:#aaa;
 }
-
-
-
-
-
 /* reledit fixing from CubicWeb CSS   */
 .releditForm {
  display:none;
@@ -211,21 +207,17 @@ form#entityForm legend{
 #loginForm fieldset.default{
     margin-left: 15px;
 }
-
 #loginForm div.form-actions {
     margin-bottom: 0px;
     background: transparent;
 }
-
 #loginForm button.btn {
     float: right;
     margin-left: 10px;
 }
-
 #loginForm input.data {
 
 }
-
 /* Primary View */
 .primary_entities div.row-fluid{
     border-bottom:1px dotted #cecece;
