--- a/data/orbui.css
+++ b/data/orbui.css
@@ -171,7 +171,7 @@ table.attributeForm tr th{
 .releditField form.releditForm > fieldset{
     background:#fff;
     border:1px solid #efefef;
-    position:relative;
+    position:absolute;
     padding:6px;
 }
 form.releditForm > fieldset table.buttonbar{
