--- a/data/orbui.css
+++ b/data/orbui.css
@@ -1,5 +1,5 @@
 /*!
- * Copyright 2012 CreaLibre (Monterrey, MEXICO), all rights reserved.
+ * Copyright 2013 CreaLibre (Monterrey, MEXICO), all rights reserved.
  * Contact http://www.crealibre.com/ -- mailto:info@crealibre.com
  *
  * This program is free software: you can redistribute it and/or modify it under
@@ -15,7 +15,6 @@
  * You should have received a copy of the GNU Lesser General Public License along
  * with this program. If not, see <http://www.gnu.org/licenses/>..
  */
-
 
 /* HEADER STYLES */
 /*----------------------------------- */
@@ -113,14 +112,6 @@ table { /* for reledit viewing */
 /* Primary View */
 form .errorMsg{
     color: #B94A48;
-    /* background-color: #F2DEDE; */
-    /* border-color: #EED3D7; */
-    /* border-radius: 4px 4px 4px 4px; */
-    /* margin-bottom: 18px; */
-    /* padding: 8px 35px 8px 14px; */
-    /* text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5); */
-    /* position:absolute; */
-    /* left:40%; */
 }
 .navcontentbottom{
     margin-top: 36px;
@@ -325,10 +316,6 @@ form#entityForm legend{
 .releditField {
     display: inline;
 }
-/* .editableField{ Use when reledit pencil goes at left
-    margin-left: -10px;
-    margin-top: -9px;
-}*/
 /* LOGIN */
 /*-----------------------------------*/
 .modal .modal-header{
@@ -404,15 +391,6 @@ table.buttonbar{
 .facet_filterbox h3.boxTitle{
     margin:0;
 }
-/* .facet input{ */
-/*     width: 90%; */
-/* } */
-/* .facet select { */
-/*     width: 40%; */
-/*     height: 20px; */
-/*     padding-left:12px; */
-/*     margin-bottom:9px; */
-/* } */
 a#facetBkLink{
     text-decoration:none;
 }
@@ -502,12 +480,123 @@ select{
     padding:0 6px;
 }
 /*
------ BOXES -----
+----- BOXES and Facets formats-----
                    */
-h3.boxTitle{
+h3.boxTitle, .facetTitle{
     border-bottom:#E5E5E5 solid 1px;
     margin:18px 0;
     padding-bottom:9px;
+}
+h3.boxTitle, .facetTitle{
+    background: #FFF;
+	padding: 5px 10px;
+	border: 1px solid #DADADA;
+	border-bottom: 0px;
+	-webkit-border-top-left-radius: 5px;
+	-webkit-border-top-right-radius: 5px;
+	-moz-border-radius-topleft: 5px;
+	-moz-border-radius-topright: 5px;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	background: #ffffff; /* Old browsers */
+	background: -moz-linear-gradient(top, #ffffff 0%, #e5e5e5 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#e5e5e5)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #ffffff 0%,#e5e5e5 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #ffffff 0%,#e5e5e5 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #ffffff 0%,#e5e5e5 100%); /* IE10+ */
+	background: linear-gradient(to bottom, #ffffff 0%,#e5e5e5 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e5e5e5',GradientType=0 ); /* IE6-9 */
+}
+.boxBody, div.facet {
+	padding: 10px;
+	border: 1px solid #DADADA;
+	background: #FFF;
+	-webkit-border-bottom-right-radius: 5px;
+	-webkit-border-bottom-left-radius: 5px;
+	-moz-border-radius-bottomright: 5px;
+	-moz-border-radius-bottomleft: 5px;
+	border-bottom-right-radius: 5px;
+	border-bottom-left-radius: 5px;
+	font-size:95%;
+    min-height:20px;
+    margin-bottom:20px;
+}
+/*
+----- FACETS on TableFilter  -----
+                                    */
+
+div.filter {
+background-color: #fff;
+border: none;
+display: inline-block;
+}
+div div.facetTitle{
+    margin:0;
+    border:none;
+    border-radius: 5px;
+}
+div.facet{
+    padding:0px;
+	border: 1px solid #DADADA;
+    border-radius: 5px;
+}
+/* This code do the first facetGroup to be horizontally aligned */
+.filter .facetGroup:first-child .facet{
+    margin:0;
+    margin-left:.6em;   
+    float:left;
+}
+.filter .facetGroup:first-child .facet:first-child{
+    margin-left:0;   
+}
+.filter .facetGroup:first-child .facet:first-child input{
+    margin: 0.4em .6em;
+}
+/* RangeFacet (also for Date Facet) */
+.filter .facetGroup:first-child div.rangeFacet{
+    width:20em;
+    margin-left:.6em;   
+}
+.filter .facetBody{
+    padding:.3em .6em;
+}
+.filter div.rangeFacet .facetBody{
+    padding: 0em 1em .6em 1em;
+}
+/*
+----- Table Filter table -----
+Just Create a table with class filter-table 
+and use the Table filter Facets on it       */
+table.filter-table{
+    width:1170px;
+    font-size:90%;
+    background:#fff;
+}
+table.filter-table td{
+    line-height:16px;
+}
+table.filter-table td a{
+    line-height:13px;
+    display:block;
+}
+/*
+----- Table Sortable and icons -----
+                                    */
+table th{
+line-height:16px;
+}
+th.sortable {
+  background: #eee url("img/table_sortable.png") 99% 2px no-repeat;
+  padding-left:6px;
+  line-height:16px;
+}
+th.headerSortUp {
+  background: #ddd url("img/table_up.png") 99% 2px no-repeat;
+  padding-left:6px;
+}
+th.headerSortDown {
+  background: #ddd url("img/table_down.png") 99% 2px no-repeat;
+  padding-left:6px;
 }
 /*
 ----- PAGINATION -----
@@ -577,21 +666,6 @@ ol.undo-actions{
     border-bottom:1px dotted #efefef;
     color:#404040;
     font-size:12px;
-}
-/*
------ Some Icons -----
-                   */
-th.sortable {
-  background: url("img/table_sortable.png") 0% 45% no-repeat;
-  padding-left:20px;
-}
-th.headerSortUp {
-  background: url("img/table_up.png") 0% 45% no-repeat;
-  padding-left:20px;
-}
-th.headerSortDown {
-  background: url("img/table_down.png") 0% 45% no-repeat;
-  padding-left:20px;
 }
 /*
 ----- UI content -----
