--- a/data/orbui.css
+++ b/data/orbui.css
@@ -572,6 +572,7 @@ table.filter-table{
     width:1170px;
     font-size:90%;
     background:#fff;
+    margin-top:9px;
 }
 table.filter-table td{
     line-height:16px;
