--- a/data/orbui.css
+++ b/data/orbui.css
@@ -544,11 +544,11 @@ div.facet{
 /* This code do the first facetGroup to be horizontally aligned */
 .filter .facetGroup:first-child .facet{
     margin:0;
-    margin-left:.6em;   
+    margin-left:.6em;
     float:left;
 }
 .filter .facetGroup:first-child .facet:first-child{
-    margin-left:0;   
+    margin-left:0;
 }
 .filter .facetGroup:first-child .facet:first-child input{
     margin: 0.4em .6em;
@@ -556,7 +556,7 @@ div.facet{
 /* RangeFacet (also for Date Facet) */
 .filter .facetGroup:first-child div.rangeFacet{
     width:20em;
-    margin-left:.6em;   
+    margin-left:.6em;
 }
 .filter .facetBody{
     padding:.3em .6em;
@@ -566,7 +566,7 @@ div.facet{
 }
 /*
 ----- Table Filter table -----
-Just Create a table with class filter-table 
+Just Create a table with class filter-table
 and use the Table filter Facets on it       */
 table.filter-table{
     width:1170px;
@@ -669,6 +669,40 @@ ol.undo-actions{
     border-bottom:1px dotted #efefef;
     color:#404040;
     font-size:12px;
+}
+/* Documentation CubicWeb /doc */
+ul.docsum{
+    border:none;
+    border-left:1px solid #ccc;
+    padding:12px 18px;
+    margin:18px auto;
+    width:80%;
+}
+ul.docsum ul.docsum{
+    border:none;
+    border-left:1px dotted #ddd;
+    font-size:98%;
+    padding:0;
+    padding-left:10px;
+    margin:6px 10px;
+    width:100%;
+}
+ul.docsum ul.docsum ul.docsum{
+    border:none;
+    font-size:90%;
+    padding:0;
+    padding-left:30px;
+    margin:0px auto;
+    width:100%;
+}
+.docnav{
+    margin:18px 0;
+    border-top:1px dotted #ddd;
+    border-bottom:1px dotted #ddd;
+    padding:10px;
+}
+.docnav span{
+    margin-right:48px;
 }
 /*
 ----- UI content -----
