--- a/data/jquery.ui.css
+++ b/data/jquery.ui.css
@@ -48,25 +48,25 @@
 ----------------------------------*/
 .ui-widget { font-family: \\\"Helvetica Neue\\\", \\\"HelveticaNeue\\\", Helvetica, Arial, \\\"Lucida Grande\\\"; font-size: 13px; }
 .ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: \\\"Helvetica Neue\\\", \\\"HelveticaNeue\\\", Helvetica, Arial, \\\"Lucida Grande\\\"; font-size: 1em; }
-.ui-widget-content { border: 1px solid #ddd; background: #ffffff url(images/ui-bg_flat_75_ffffff_40x100.png) 50% 50% repeat-x; color: #555555; }
+.ui-widget-content { border: 1px solid #ddd; background: #ffffff /*url(images/ui-bg_flat_75_ffffff_40x100.png) 50% 50% repeat-x*/; color: #555555; }
 .ui-widget-content a { color: #2A85E8; }
-.ui-widget-header { border: 1px solid #ddd; background: #f5f5f5 url(images/ui-bg_highlight-soft_75_f5f5f5_1x100.png) 50% 50% repeat-x; color: #555555; font-weight: bold; }
+.ui-widget-header { border: 1px solid #ddd; background: #f5f5f5 /*url(images/ui-bg_highlight-soft_75_f5f5f5_1x100.png) 50% 50% repeat-x*/; color: #555555; font-weight: bold; }
 .ui-widget-header a { color: #2A85E8; }
 
 /* Interaction states
 ----------------------------------*/
-.ui-state-default, .ui-widget-content .ui-state-default { border: 1px solid #d3d3d3; background: #e6e6e6 url(images/ui-bg_glass_75_e6e6e6_1x400.png) 50% 50% repeat-x; font-weight: normal; color: #2a85e8; outline: none; }
+.ui-state-default, .ui-widget-content .ui-state-default { border: 1px solid #d3d3d3; background: #e6e6e6 /*url(images/ui-bg_glass_75_e6e6e6_1x400.png) 50% 50% repeat-x*/; font-weight: normal; color: #2a85e8; outline: none; }
 .ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited { color: #2a85e8; text-decoration: none; outline: none; }
-.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus { border: 1px solid #999999; background: #dadada url(images/ui-bg_glass_75_dadada_1x400.png) 50% 50% repeat-x; font-weight: normal; color: #11639d; outline: none; }
+.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus { border: 1px solid #999999; background: #dadada /*url(images/ui-bg_glass_75_dadada_1x400.png) 50% 50% repeat-x*/; font-weight: normal; color: #11639d; outline: none; }
 .ui-state-hover a, .ui-state-hover a:hover { color: #11639d; text-decoration: none; outline: none; }
-.ui-state-active, .ui-widget-content .ui-state-active { border: 1px solid #aaaaaa; background: #ffffff url(images/ui-bg_glass_65_ffffff_1x400.png) 50% 50% repeat-x; font-weight: normal; color: #cc4714; outline: none; }
+.ui-state-active, .ui-widget-content .ui-state-active { border: 1px solid #aaaaaa; background: #ffffff /*url(images/ui-bg_glass_65_ffffff_1x400.png) 50% 50% repeat-x*/; font-weight: normal; color: #cc4714; outline: none; }
 .ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited { color: #cc4714; outline: none; text-decoration: none; }
 
 /* Interaction Cues
 ----------------------------------*/
-.ui-state-highlight, .ui-widget-content .ui-state-highlight {border: 1px solid #fcefa1; background: #fbf9ee url(images/ui-bg_glass_55_fbf9ee_1x400.png) 50% 50% repeat-x; color: #cc4714; }
+.ui-state-highlight, .ui-widget-content .ui-state-highlight {border: 1px solid #fcefa1; background: #fbf9ee /*url(images/ui-bg_glass_55_fbf9ee_1x400.png) 50% 50% repeat-x*/; color: #cc4714; }
 .ui-state-highlight a, .ui-widget-content .ui-state-highlight a { color: #cc4714; }
-.ui-state-error, .ui-widget-content .ui-state-error {border: 1px solid #cd0a0a; background: #fef1ec url(images/ui-bg_glass_95_fef1ec_1x400.png) 50% 50% repeat-x; color: #cd0a0a; }
+.ui-state-error, .ui-widget-content .ui-state-error {border: 1px solid #cd0a0a; background: #fef1ec /*url(images/ui-bg_glass_95_fef1ec_1x400.png) 50% 50% repeat-x*/; color: #cd0a0a; }
 .ui-state-error a, .ui-widget-content .ui-state-error a { color: #cd0a0a; }
 .ui-state-error-text, .ui-widget-content .ui-state-error-text { color: #cd0a0a; }
 .ui-state-disabled, .ui-widget-content .ui-state-disabled { opacity: .35; filter:Alpha(Opacity=35); background-image: none; }
@@ -277,8 +277,8 @@
 .ui-corner-all { -moz-border-radius: 3px; -webkit-border-radius: 3px; }
 
 /* Overlays */
-.ui-widget-overlay { background: #aaaaaa url(images/ui-bg_flat_0_aaaaaa_40x100.png) 50% 50% repeat-x; opacity: .30;filter:Alpha(Opacity=30); }
-.ui-widget-shadow { margin: -8px 0 0 -8px; padding: 8px; background: #aaaaaa url(images/ui-bg_flat_0_aaaaaa_40x100.png) 50% 50% repeat-x; opacity: .30;filter:Alpha(Opacity=30); -moz-border-radius: 8px; -webkit-border-radius: 8px; }/* Resizable
+.ui-widget-overlay { background: #aaaaaa /*url(images/ui-bg_flat_0_aaaaaa_40x100.png) 50% 50% repeat-x*/; opacity: .30;filter:Alpha(Opacity=30); }
+.ui-widget-shadow { margin: -8px 0 0 -8px; padding: 8px; background: #aaaaaa /*url(images/ui-bg_flat_0_aaaaaa_40x100.png) 50% 50% repeat-x*/; opacity: .30;filter:Alpha(Opacity=30); -moz-border-radius: 8px; -webkit-border-radius: 8px; }/* Resizable
 ----------------------------------*/
 .ui-resizable { position: relative;}
 .ui-resizable-handle { position: absolute;font-size: 0.1px;z-index: 99999; display: block;}
