--- a/data/orbui.css
+++ b/data/orbui.css
@@ -522,10 +522,17 @@ h3.boxTitle, .facetTitle{
     min-height:20px;
     margin-bottom:20px;
 }
+.facet_filterbox div.facetTitle{
+    border-radius: 0px;
+    padding-top: 0px;
+    margin-bottom: 4px;
+}
+.facet_filterbox .facet input{
+    margin-left:4px;
+}
 /*
 ----- FACETS on TableFilter  -----
                                     */
-
 div.filter {
 background-color: #fff;
 border: none;
