--- a/data/orbui.css
+++ b/data/orbui.css
@@ -715,6 +715,10 @@ ul.docsum ul.docsum ul.docsum{
 .docnav span{
     margin-right:48px;
 }
+.modal-links{
+    position: absolute;
+    bottom: 31px;
+}
 /*
 ----- UI content -----
                    */
