[view, css] modal-links style is updated to allow more vertical space for links, also it was removed cancel button in login view

--- a/data/orbui.css
+++ b/data/orbui.css
@@ -721,7 +721,8 @@ ul.docsum ul.docsum ul.docsum{
 }
 .modal-links{
     position: absolute;
-    bottom: 31px;
+    bottom: 2px;
+    margin-left: 12px;
 }
 /*
 ----- UI content -----
